# python-applemaps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-test.yml  publish.yml
apple_maps/: client.py
tests/: __init__.py  test_client.py
