[tool.poetry]
name = "apple_maps"
version = "1.1.3"
description = "Python client for Apple WeatherKit API"
authors = ["Ryan Morash <ryan@morash.me>"]
readme = "README.md"
repository = "https://github.com/ryanmorash/python-applemaps"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
pyjwt = {version = "==2.*", extras = ["crypto"]}
aiohttp-retry = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
